tests/rustdoc-ui/doc-include-suggestion.stderr
error: unknown `doc` attribute `include`
  --> $DIR/doc-include-suggestion.rs:4:7
   |
LL | #[doc(include = "external-cross-doc.md")]
   |       ^^^^^^^ help: use `doc = include_str!` instead: `#[doc = include_str!("external-cross-doc.md")]`
   |
note: the lint level is defined here
  --> $DIR/doc-include-suggestion.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

